[project]
name = "dynamic-vram-stats"
description = "ComfyUI plugin to monitor Dynamic VRAM usage"
version = "1.0.1"
license = {file = "LICENSE"} 
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    # "Operating System :: OS Independent",

    # OR for OS-specific nodes, specify the supported systems:
    "Operating System :: Microsoft :: Windows",  # Windows specific
    "Operating System :: POSIX :: Linux",  # Linux specific
    # "Operating System :: MacOS",  # macOS specific
    
    # GPU Accelerator support
    "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
    # "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
    # "Environment :: GPU :: Intel Arc",      # Intel Arc support
    # "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
    # "Environment :: GPU :: Apple Metal",    # Apple Metal support
]

[project.urls]
Repository = "https://github.com/metebalci/ComfyUI-dynamicvramstats"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/metebalci/ComfyUI-dynamicvramstats/wiki"
"Bug Tracker" = "https://github.com/metebalci/ComfyUI-dynamicvramstats/issues"

[tool.comfy]
PublisherId = "metebalci"
DisplayName = "Dynamic VRAM Stats"
Icon = "https://raw.githubusercontent.com/metebalci/ComfyUI-dynamicvramstats/main/icon.png"
includes = [] 
"requires-comfyui" = ">=0.16.4"

